tests/snapshots/examples_fixtures/basics__strings.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/basics/strings.flx
== compile ==
failed (compile)
== diagnostics ==
error[E056]: Wrong Number Of Arguments

The `substring` function takes 3 arguments, but 2 were provided.

  examples/basics/strings.flx:29:11
   |
29 |     print(substring("HELLO world", 0));
   |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |           --------------------------- 2 arguments provided here, expected 3

Help:
  Add 1 missing argument(s), for example: `substring(arg1, arg2, arg3)`.
== stdout ==
<not executed>
